<resources>
    <string name="app_name">WALL_E</string>
    <string name="text_Fawn_man">Fawn man:WALL_E</string>
    <string name="text_unknown">unknown</string>
    <string name="text_login">log in</string>
    <string name="text_registered">registered</string>
    <string name="text_forget_password">forget password?</string>
    <string name="text_keep_password">Remember the password</string>
    <string name="text_user_name">username</string>
    <string name="text_password">password</string>
    <string name="text_intelligent">intelligent</string>
    <string name="text_concise">concise</string>
    <string name="text_powerful">powerful</string>
    <string name="text_Go_to_the_home_page">Go to the home page</string>
    <string name="text_now_login">logging in...</string>
    <string name="text_editor_password">change Password</string>
    <string name="text_now_password">old password</string>
    <string name="text_new_password">new password</string>
    <string name="text_email">mailbox</string>
    <string name="text_password_again">Re-enter the password</string>
    <string name="text_email_send_ok">The mailbox has been sent to：</string>
    <string name="text_email_send_no">Mailbox failed to send</string>
    <string name="reset_successfully">Reset password successfully</string>
    <string name="reset_failed">Reset password failed</string>
    <string name="text_tost_empty">The input box can not be empty</string>
    <string name="text_two_input_not_consistent">The password entered twice is inconsistent</string>
    <string name="text_age">age</string>
    <string name="text_desc">Introduction</string>
    <string name="text_boy">boy</string>
    <string name="text_girl">girl</string>
    <string name="text_register_remind">Registration is required to go to the mailbox verification, or can not log!</string>
    <string name="text_nothing">This person is lazy, nothing left!</string>
    <string name="text_registered_successful">registration success</string>
    <string name="text_registered_failure">registration failed</string>
    <string name="text_Eve">Eve!</string>
    <string name="text_logon_failure">Logon failure</string>
    <string name="text_attribution">Attribution:</string>
    <string name="text_area_code">Area code:</string>
    <string name="text_zip_code">Zip code:</string>
    <string name="text_operator">Operator:</string>
    <string name="text_cell_phone_number">Cell-phone number:</string>

    <string name="alphabet_and_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="alphabet_and_number_age">0123456789</string>

    <string name="email_completionHint">Please select the email suffix</string>
</resources>
