<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_user_name"
        android:digits="@string/alphabet_and_number"
        android:maxLength="11"
        android:inputType="number"/>

    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/text_age"
        android:maxLength="2"
        android:layout_marginTop="10dp"
        android:digits="@string/alphabet_and_number_age"/>

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_desc"
        android:layout_marginTop="10dp"
        android:maxLength="50"
        android:lines="2"/>

    <RadioGroup
        android:id="@+id/mRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_boy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_boy"/>

        <RadioButton
            android:id="@+id/rb_girl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/text_girl_f"/>

    </RadioGroup>


    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        android:layout_marginTop="10dp"
        android:digits="@string/alphabet_and_number"
        android:maxLength="16"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password_again"
        android:maxLength="16"
        android:digits="@string/alphabet_and_number"
        android:inputType="textPassword"/>

        <AutoCompleteTextView
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:layout_marginTop="10dp"
            android:digits="@string/alphabet_and_number"
            android:maxLength="25"
            android:completionHint="@string/email_completionHint"
            android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_register_remind"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/btnRegistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/text_registered"
        android:textColor="@android:color/white"/>

</LinearLayout>
