<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_editor_password"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/et_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/text_now_password"
        android:digits="@string/alphabet_and_number"
        android:maxLength="16"/>

    <EditText
        android:id="@+id/et_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_new_password"
        android:digits="@string/alphabet_and_number"
        android:maxLength="16"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/text_password_again"
        android:digits="@string/alphabet_and_number"
        android:maxLength="16"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/text_editor_password"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_forget_password"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>

    <AutoCompleteTextView
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"
        android:layout_marginTop="10dp"
        android:digits="@string/alphabet_and_number"
        android:maxLength="25"
        android:completionHint="@string/email_completionHint"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/text_forget_password"
        android:textColor="@android:color/white" />


</LinearLayout>